--- a/ComicBookRegistry.UI/ComicBookRegistry.UI.csproj
+++ b/ComicBookRegistry.UI/ComicBookRegistry.UI.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ComicBookRegistry.Domain\ComicBookRegistry.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
