Fix unit test with custom file dto type

--- a/ComicBookRegistry.Domain/ComicBookRegistry.Domain.csproj
+++ b/ComicBookRegistry.Domain/ComicBookRegistry.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ComicBookRegistry.Application\ComicBookRegistry.Application.csproj" />
     <ProjectReference Include="..\ComicBookRegistry.Core\ComicBookRegistry.Core.csproj" />
   </ItemGroup>
 
